creusot/tests/should_fail/ghost/deref_in_program.stderr
error: dereference of a ghost variable in program context
 --> deref_in_program.rs:6:20
  |
6 |     let _: &i32 = &*g;
  |                    ^^ help: try wrapping this expression in a ghost block: `ghost!{ *g }`

error: dereference of a ghost variable in program context
  --> deref_in_program.rs:11:28
   |
11 |     let _: &mut i32 = &mut *g;
   |                            ^^ help: try wrapping this expression in a ghost block: `ghost!{ *g }`

error: trying to access the contents of a ghost variable in program context
  --> deref_in_program.rs:16:20
   |
16 |     let _: i32 = g.into_inner();
   |                    ^^^^^^^^^^^^
   |
   = note: This method can only be used inside a `ghost!` block

error: aborting due to 3 previous errors

